[package]
name = "webview_official"
version = "0.0.3"
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>",
  "Serge Zaitsev <zaitsev.serge@gmail.com>"
]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tauri-apps/webview_rust"
description = "Official Webview-org Rust bindings, a tiny cross-platform library to render web-based GUIs for desktop applications"
keywords = [ "web", "gui", "desktop", "webkit" ]
categories = [ "gui", "api-bindings" ]
edition = "2018"

[features]
chrome-backend = ["headless_chrome", "serde_json"]

[lib]
name = "webview_official"
path = "src/lib.rs"

[[example]]
name = "sample"
path = "examples/sample.rs"

[dependencies]
webview-official-sys = { path = "webview-official-sys", version = "0.1" }
headless_chrome = { git = "https://github.com/katharostech/rust-headless-chrome.git", branch = "customizable-chrome-args", optional = true }
serde_json = { version = "1.0.57", optional = true }
